--- a/src/scss/components/_goup.scss
+++ b/src/scss/components/_goup.scss
@@ -39,10 +39,8 @@
     right: 15px;
     bottom: 15px;
     margin: 0;
-    
-    & a{
+
+   a{
         text-decoration: none;
     }
-    
-    &
 }
