--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -23,6 +23,7 @@
 @import './pages/leaneating';
 @import './pages/lifestyle';
 @import './pages/mythsbusted';
+@import './pages/pillars';
 @import './pages/recipe';
 @import './pages/recipes';
 @import './pages/staples';
