--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -8,6 +8,7 @@
     padding: 150px 0 50px;
     overflow-x: hidden;
   }
+
   &--third {
     padding-bottom: 100px;
   }
@@ -49,86 +50,7 @@
     margin-left: 33%;
   }
 }
-@media only screen and (min-width: $bp-sm) {
-  .homeHero {
-    &__button {
-      margin: 4rem auto;
-    }
 
-    &__img-wrapper {
-      max-width: none;
-    }
-
-    &__img {
-      max-width: none;
-      width: 80%;
-      margin-left: 35%;
-    }
-  }
-}
-@media only screen and (min-width: $bp-md) {
-  .homeHero {
-    &__button {
-      margin: 6rem 0 3rem 1rem;
-    }
-
-    &__img {
-      width: 70%;
-      margin-left: -15%;
-    }
-  }
-}
-@media only screen and (min-width: $bp-lg) {
-  .homeHero {
-    &__button {
-      margin: 6rem 0 3rem 1rem;
-    }
-
-    &__img {
-      width: 70%;
-      margin-top: -5%;
-      margin-left: 35%;
-    }
-  }
-}
-@media only screen and (min-width: $bp-xl) {
-  .homeHero {
-    &__img {
-      width: 50%;
-      margin-top: -25%;
-      margin-left: 35%;
-    }
-  }
-}
-
-.three-block {
-  &__title {
-    text-align: center;
-    color: $font;
-  }
-
-  &__box {
-    &--first {
-      background: linear-gradient(40deg, $PowderBlue 60%, $Porcelain 40%);
-    }
-
-    &--second {
-      background: linear-gradient(323deg, $PowderBlue 60%, $Porcelain 40%);
-    }
-
-    &--third {
-      background: linear-gradient(38deg, $PowderBlue 60%, $Porcelain 40%);
-    }
-  }
-
-  &__subtitle {
-    padding: 20px 0 10px 10px;
-  }
-
-  &__text {
-    padding: 0 15px 10px;
-  }
-}
 .intro {
   &__link {
     cursor: pointer;
@@ -164,32 +86,125 @@
     margin-top: 2rem;
   }
 }
+
 .sliderImg {
-  margin: 50px auto 0px;
+  margin: 50px auto 0;
+
   &__image {
     max-width: 80%;
     display: block;
     margin: 0 auto;
   }
-  &__wrapperText{
 
-  }
-  &__text{
+  &__wrapperText {}
+
+  &__text {
     text-align: center;
   }
 }
+
+.imagesRoll {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 auto;
+  flex-wrap: wrap;
+
+  &__img {
+    max-width: 25%;
+  }
+}
+
+.three-block {
+  &__wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__title {
+    text-align: center;
+    color: $font;
+  }
+
+  &__box {
+    margin-bottom: 40px;
+    position: relative;
+
+    &--first {
+      background: linear-gradient(40deg, $PowderBlue 60%, $Porcelain 40%);
+    }
+
+    &--second {
+      background: linear-gradient(323deg, $PowderBlue 60%, $Porcelain 40%);
+    }
+
+    &--third {
+      background: linear-gradient(38deg, $PowderBlue 60%, $Porcelain 40%);
+    }
+    &--fitfirst {
+      background: linear-gradient(40deg, $CaribbeanGreenLight 60%, $Porcelain 40%);
+    }
+
+    &--fitsecond {
+      background: linear-gradient(323deg, $CaribbeanGreenLight 60%, $Porcelain 40%);
+    }
+
+    &--fitthird {
+      background: linear-gradient(38deg, $CaribbeanGreenLight 60%, $Porcelain 40%);
+    }
+  }
+
+  &__subtitle {
+    padding: 20px 0 10px 10px;
+  }
+
+  &__text {
+    padding: 0 15px 50px;
+  }
+  &__btn {
+    display: block;
+    text-decoration: none;
+    font-weight: bold;
+    color: $font;
+    cursor: pointer;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+
 @media only screen and (min-width: $bp-sm) {
+  .homeHero {
+    &__button {
+      margin: 4rem auto;
+    }
+
+    &__img-wrapper {
+      max-width: none;
+    }
+
+    &__img {
+      max-width: none;
+      width: 80%;
+      margin-left: 35%;
+    }
+  }
+
   .sliderImg {
     display: flex;
     flex-direction: row;
+
     &__image {
       max-width: 40%;
     }
-    &__wrapperText{
+
+    &__wrapperText {
       position: relative;
       width: 50%;
     }
-    &__text{
+
+    &__text {
       margin: 0;
       position: absolute;
       top: 50%;
@@ -200,13 +215,71 @@
   }
 }
 @media only screen and (min-width: $bp-md) {
+  .homeHero {
+    &__button {
+      margin: 6rem 0 3rem 1rem;
+    }
+
+    &__img {
+      width: 70%;
+      margin-left: -15%;
+    }
+  }
+
   .sliderImg {
     display: flex;
     flex-direction: row;
     flex-flow: row-reverse;
   }
+  .imagesRoll {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    flex-wrap: wrap;
+
+    &__img {
+      max-width: 12.5%;
+    }
+  }
+}
+@media only screen and (min-width: $bp-lg) {
+  .homeHero {
+    &__button {
+      margin: 6rem 0 3rem 1rem;
+    }
+
+    &__img {
+      width: 70%;
+      margin-top: -5%;
+      margin-left: 35%;
+    }
+  }
+
+  .three-block {
+    margin-top: 20px;
+
+    &__wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+    }
+
+    &__box {
+      width: 30%;
+      margin-right: 3.3333333%;
+    }
+  }
 }
 @media only screen and (min-width: $bp-xl) {
+  .homeHero {
+    &__img {
+      width: 50%;
+      margin-top: -25%;
+      margin-left: 35%;
+    }
+  }
+
   .intro {
     max-width: 100%;
     margin: 0 auto;
@@ -215,6 +288,7 @@
     &__offset {
       margin-left: 24%!important;
     }
+
     &__block {
       text-align: center;
     }
@@ -226,15 +300,18 @@
       margin: 0 auto;
     }
   }
+
   .sliderImg {
     max-width: 25%;
     display: block;
-    top:120px;
-    margin-top:0px;
+    top: 120px;
+    margin-top: 0;
     position: absolute;
+
     &__image {
       max-width: 100%;
     }
+
     &__text {
       display: none;
     }
