--- a/scss/components/_goup.scss
+++ b/scss/components/_goup.scss
@@ -2,37 +2,29 @@
 
 .go_up {
   display: inline-block;
-  width: 25px;
-  height: 25px;
-  padding: 20px;
-  background: #f9b4ec;
-  font-size: 20px;
+  text-transform: uppercase;
+  font-size: 1rem;
+  width: 100px;
+  padding: 0.8rem;
+  background: $CaribbeanGreen;
   color: #fff;
   cursor: pointer;
+  border: none;
   position: fixed;
   bottom: 20px;
   right: 20px;
-  border: 0 solid white;
-  border-radius: 5px;
   z-index: 999;
 
   &:before {
-    font-size: 1.5em;
-    line-height: 25px;
     position: absolute;
-    border-color: inherit;
     transition: transform 0.5s ease-in;
     margin-left: 5px;
   }
 
   &:hover {
-    background-color: #fac4f0;
-
-    &:before {
-      transform: rotate(360deg);
+    background-color: #9562b6;
     }
   }
-}
 
 .goIngre{
     position: fixed;
