--- a/scss/pages/_recipe.scss
+++ b/scss/pages/_recipe.scss
@@ -1,6 +1,19 @@
 @import '../base/colours';
 @import '../layout/grid';
 /* ALEX STYLES */
+
+.btnIngredientDeskt {
+    display: none;
+}
+
+.steps {
+    padding-bottom: 100px;
+}
+
+
+.stepbar{
+    display:none;
+}
 .rece {
   padding: 150px 0;
 
@@ -122,10 +135,7 @@
     }
   }
   /* --- STEPS SEC --- */
-  .steps {
-    margin-bottom: 15px;
-  }
-
+ 
   .ingre {
     position: static;
     width: 46%;
@@ -146,7 +156,6 @@
   }
 
   .btnIngredientDeskt {
-    display: none;
     position: fixed;
     z-index: 9999;
     bottom: 20px;
@@ -163,10 +172,5 @@
       border: none;
       display: block;
     }
-  }
-}
-@media only screen and (max-width: 959px) {
-  .btnIngredientDeskt {
-    display: none;
   }
 }
