--- a/css/styles.css
+++ b/css/styles.css
@@ -1964,7 +1964,7 @@ h6 {
     width: 96%; } }
 
 .beachBod-intro {
-  background-image: url("../imes/gym.jpg");
+  background-image: url("../images/gym.jpg");
   background-size: 100%;
   color: #fff;
   margin-top: 50px;
